--- a/Sprint2/Task3.ipynb
+++ b/Sprint2/Task3.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания №14\n"
    ]
   },
   {
@@ -26,7 +26,13 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n",
+    "Создать базовый класс Supplier в C#, который будет представлять информацию о\n",
+    "поставщиках товаров или услуг. На основе этого класса разработать 2-3\n",
+    "производных класса, демонстрирующих принципы наследования и полиморфизма.\n",
+    "В каждом из классов должны быть реализованы новые атрибуты и методы, а также\n",
+    "переопределены некоторые методы базового класса для демонстрации\n",
+    "полиморфизма.\n",
+    "\n",
     "\n",
     "#### Дополнительное задание\n",
     "Добавьте к сущестующим классам (базовыму и производным 3-4 атрибута и метода) и реализуйте простое, сложное и множественное наследование"
@@ -52,8 +58,253 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID поставщика: 2; Название компании: Silent Hill; Тип продукции: Видеоигры\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа поставщику.\n",
+      "\n",
+      "ID поставщика: 15; Название компании: Biohazard; Тип продукции: Биологическое оружие\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Год основания компании: 2021\n",
+      "\n",
+      "ID поставщика: 28; Название компании: CyberLife; Тип продукции: Роботы\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа по адресу: Детроит\n",
+      "\n",
+      "ID поставщика: 90; Название компании: DMC3; Тип продукции: Пицца\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Быстрая доставка: True\n",
+      "\n",
+      "ID поставщика: 52; Название компании: Балдёж; Тип продукции: Пиво\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа поставщику.\n",
+      "Страна производства: Норвегия\n",
+      "\n",
+      "Взаимодействие между объектами:\n",
+      "Розничный продавец CyberLife делает заказ у производителя Biohazard.\n",
+      "ID поставщика: 15; Название компании: Biohazard; Тип продукции: Биологическое оружие\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Год основания компании: 2021\n",
+      "ID поставщика: 28; Название компании: CyberLife; Тип продукции: Роботы\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа по адресу: Детроит\n",
+      "\n",
+      "Импортер Балдёж предлагает свою продукцию Пиво.\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа поставщику.\n",
+      "\n",
+      "Количество поставщиков: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Supplier\n",
+    "{\n",
+    "    private int supplierid;\n",
+    "    private string companyname;\n",
+    "    private string producttype;\n",
+    "    \n",
+    "    public static int TotalSuppliers { get; private set; } = 0;\n",
+    "\n",
+    "    public Supplier(int id, string name, string type)\n",
+    "    {\n",
+    "        SupplierId = id;\n",
+    "        CompanyName = name;\n",
+    "        ProductType = type;\n",
+    "        TotalSuppliers++;\n",
+    "    }\n",
+    "\n",
+    "    public int SupplierId\n",
+    "    {\n",
+    "        get { return supplierid; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value > 0)\n",
+    "                supplierid = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"ID не может быть отрицательным!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public string CompanyName\n",
+    "    {\n",
+    "        get { return companyname; }\n",
+    "        set { companyname = value; }\n",
+    "    }\n",
+    "\n",
+    "    public string ProductType\n",
+    "    {\n",
+    "        get { return producttype; }\n",
+    "        set { producttype = value; }\n",
+    "    }\n",
+    "\n",
+    "    public virtual void GetCompanyInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ID поставщика: {supplierid}; Название компании: {companyname}; Тип продукции: {producttype}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void ProvideQuote()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Предоставление котировки на товары или услуги.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void SubmitOrder()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Отправка заказа поставщику.\");\n",
+    "    }\n",
+    "\n",
+    "    public static void DisplayTotalSuppliers()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Количество поставщиков: {TotalSuppliers}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Manufacturer : Supplier\n",
+    "{\n",
+    "    private int foundedyear;\n",
+    "\n",
+    "    public Manufacturer(int id, string name, string type, int year) : base(id, name, type)\n",
+    "    {\n",
+    "        FoundedYear = year;\n",
+    "    }\n",
+    "\n",
+    "    public int FoundedYear\n",
+    "    {\n",
+    "        get { return foundedyear; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value > 0)\n",
+    "                foundedyear = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Год не может быть отрицательным!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public override void ProvideQuote()\n",
+    "    {\n",
+    "        base.GetCompanyInfo();\n",
+    "        base.ProvideQuote();\n",
+    "        Console.WriteLine($\"Год основания компании: {FoundedYear}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Retailer : Supplier\n",
+    "{\n",
+    "    private string storelocation;\n",
+    "\n",
+    "    public Retailer(int id, string name, string type, string location) : base(id, name, type)\n",
+    "    {\n",
+    "        StoreLocation = location;\n",
+    "    }\n",
+    "\n",
+    "    public string StoreLocation\n",
+    "    {\n",
+    "        get { return storelocation; }\n",
+    "        set { storelocation = value; }\n",
+    "    }\n",
+    "\n",
+    "    public override void SubmitOrder()\n",
+    "    {\n",
+    "        base.GetCompanyInfo();\n",
+    "        base.ProvideQuote();\n",
+    "        Console.WriteLine($\"Отправка заказа по адресу: {storelocation}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Delivery : Retailer\n",
+    "{\n",
+    "    public bool FastDelivery { get; set; }\n",
+    "\n",
+    "    public Delivery(int id, string name, string type, string location, bool fastDelivery) : base(id, name, type, location)\n",
+    "    {\n",
+    "        FastDelivery = fastDelivery;\n",
+    "    }\n",
+    "\n",
+    "    public override void SubmitOrder()\n",
+    "    {\n",
+    "        base.GetCompanyInfo();\n",
+    "        base.ProvideQuote();\n",
+    "        Console.WriteLine($\"Быстрая доставка: {FastDelivery}\");\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "public class Importer : Supplier\n",
+    "{\n",
+    "    private string origincountry;\n",
+    "\n",
+    "    public Importer(int id, string name, string type, string country) : base(id, name, type)\n",
+    "    {\n",
+    "        OriginCountry = country;\n",
+    "    }\n",
+    "\n",
+    "    public string OriginCountry\n",
+    "    {\n",
+    "        get { return origincountry; }\n",
+    "        set { origincountry = value; }\n",
+    "    }\n",
+    "\n",
+    "    public override void GetCompanyInfo()\n",
+    "    {\n",
+    "        base.GetCompanyInfo();\n",
+    "        base.ProvideQuote();\n",
+    "        base.SubmitOrder();\n",
+    "        Console.WriteLine($\"Страна производства: {OriginCountry}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "// Создание объектов\n",
+    "    Supplier supplier = new Supplier(2, \"Silent Hill\", \"Видеоигры\");\n",
+    "    supplier.GetCompanyInfo();\n",
+    "    supplier.ProvideQuote();\n",
+    "    supplier.SubmitOrder();\n",
+    "\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "    Manufacturer manufacturer = new Manufacturer(15, \"Biohazard\", \"Биологическое оружие\", 2021);\n",
+    "    manufacturer.ProvideQuote();\n",
+    "\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "    Retailer retailer = new Retailer(28, \"CyberLife\", \"Роботы\", \"Детроит\");\n",
+    "    retailer.SubmitOrder();\n",
+    "\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "    Delivery delivery = new Delivery(90, \"DMC3\", \"Пицца\", \"Берлин\", true);\n",
+    "    delivery.SubmitOrder();\n",
+    "\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "    Importer importer = new Importer(52, \"Балдёж\", \"Пиво\", \"Норвегия\");\n",
+    "    importer.GetCompanyInfo();\n",
+    "\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "    // Взаимодействие между объектами\n",
+    "    Console.WriteLine(\"Взаимодействие между объектами:\");\n",
+    "\n",
+    "    // Например, розничный продавец может сделать заказ у производителя\n",
+    "    Console.WriteLine($\"Розничный продавец {retailer.CompanyName} делает заказ у производителя {manufacturer.CompanyName}.\");\n",
+    "    manufacturer.ProvideQuote();\n",
+    "    retailer.SubmitOrder();\n",
+    "\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "    // Импортер предлагает свою продукцию\n",
+    "    Console.WriteLine($\"Импортер {importer.CompanyName} предлагает свою продукцию {importer.ProductType}.\");\n",
+    "    supplier.ProvideQuote();\n",
+    "    importer.SubmitOrder();\n",
+    "\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "    Supplier.DisplayTotalSuppliers();"
+   ]
   }
  ],
  "metadata": {
