--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -74,7 +74,7 @@
       "Предоставление котировки на товары или услуги.\n",
       "Отправка заказа по адресу: Детроит\n",
       "\n",
-      "ID поставщика: 52. Название компании: Балдёж. Тип продукции: Пиво. Страна производства: Норвегия\n",
+      "ID поставщика: 52. Название компании: Балдёж. Тип продукции: Шоколад. Страна производства: Норвегия\n",
       "Предоставление котировки на товары или услуги.\n",
       "Отправка заказа поставщику.\n",
       "\n",
@@ -83,7 +83,7 @@
       "Год основания компании 2021.\n",
       "Отправка заказа по адресу: Детроит\n",
       "\n",
-      "Импортер Балдёж предлагает свою продукцию Пиво.\n",
+      "Импортер Балдёж предлагает свою продукцию Шоколад.\n",
       "Предоставление котировки на товары или услуги.\n",
       "Отправка заказа поставщику.\n",
       "\n",
@@ -245,7 +245,7 @@
     "\n",
     "    Console.WriteLine();\n",
     "\n",
-    "    Importer importer = new Importer(52, \"Балдёж\", \"Пиво\", \"Норвегия\");\n",
+    "    Importer importer = new Importer(52, \"Балдёж\", \"Шоколад\", \"Норвегия\");\n",
     "    importer.GetCompanyInfo();\n",
     "    importer.ProvideQuote();\n",
     "    importer.SubmitOrder();\n",
