--- a/Sprint2/Task3.ipynb
+++ b/Sprint2/Task3.ipynb
@@ -79,7 +79,7 @@
       "Предоставление котировки на товары или услуги.\n",
       "Быстрая доставка: True\n",
       "\n",
-      "ID поставщика: 52; Название компании: Балдёж; Тип продукции: Пиво\n",
+      "ID поставщика: 52; Название компании: Балдёж; Тип продукции: Шоколад\n",
       "Предоставление котировки на товары или услуги.\n",
       "Отправка заказа поставщику.\n",
       "Страна производства: Норвегия\n",
@@ -93,7 +93,7 @@
       "Предоставление котировки на товары или услуги.\n",
       "Отправка заказа по адресу: Детроит\n",
       "\n",
-      "Импортер Балдёж предлагает свою продукцию Пиво.\n",
+      "Импортер Балдёж предлагает свою продукцию Шоколад.\n",
       "Предоставление котировки на товары или услуги.\n",
       "Отправка заказа поставщику.\n",
       "\n",
@@ -281,7 +281,7 @@
     "\n",
     "    Console.WriteLine();\n",
     "\n",
-    "    Importer importer = new Importer(52, \"Балдёж\", \"Пиво\", \"Норвегия\");\n",
+    "    Importer importer = new Importer(52, \"Балдёж\", \"Шоколад\", \"Норвегия\");\n",
     "    importer.GetCompanyInfo();\n",
     "\n",
     "    Console.WriteLine();\n",
