--- a/Sprint2/Task3.ipynb
+++ b/Sprint2/Task3.ipynb
@@ -77,20 +77,20 @@
       "\n",
       "ID поставщика: 90; Название компании: DMC3; Тип продукции: Пицца\n",
       "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа по адресу: Берлин\n",
       "Быстрая доставка: True\n",
       "\n",
       "ID поставщика: 52; Название компании: Балдёж; Тип продукции: Шоколад\n",
       "Предоставление котировки на товары или услуги.\n",
       "Отправка заказа поставщику.\n",
       "Страна производства: Норвегия\n",
+      "Заказ с ID: 52 выполнен\n",
       "\n",
       "Взаимодействие между объектами:\n",
       "Розничный продавец CyberLife делает заказ у производителя Biohazard.\n",
       "ID поставщика: 15; Название компании: Biohazard; Тип продукции: Биологическое оружие\n",
       "Предоставление котировки на товары или услуги.\n",
       "Год основания компании: 2021\n",
-      "ID поставщика: 28; Название компании: CyberLife; Тип продукции: Роботы\n",
-      "Предоставление котировки на товары или услуги.\n",
       "Отправка заказа по адресу: Детроит\n",
       "\n",
       "Импортер Балдёж предлагает свою продукцию Шоколад.\n",
@@ -163,6 +163,11 @@
     "    }\n",
     "}\n",
     "\n",
+    "public interface qImporter\n",
+    "{\n",
+    "    void Complete();\n",
+    "}\n",
+    "\n",
     "public class Manufacturer : Supplier\n",
     "{\n",
     "    private int foundedyear;\n",
@@ -209,8 +214,6 @@
     "\n",
     "    public override void SubmitOrder()\n",
     "    {\n",
-    "        base.GetCompanyInfo();\n",
-    "        base.ProvideQuote();\n",
     "        Console.WriteLine($\"Отправка заказа по адресу: {storelocation}\");\n",
     "    }\n",
     "}\n",
@@ -228,12 +231,13 @@
     "    {\n",
     "        base.GetCompanyInfo();\n",
     "        base.ProvideQuote();\n",
+    "        base.SubmitOrder();\n",
     "        Console.WriteLine($\"Быстрая доставка: {FastDelivery}\");\n",
     "    }\n",
     "\n",
     "}\n",
     "\n",
-    "public class Importer : Supplier\n",
+    "public class Importer : Supplier, qImporter\n",
     "{\n",
     "    private string origincountry;\n",
     "\n",
@@ -255,6 +259,11 @@
     "        base.SubmitOrder();\n",
     "        Console.WriteLine($\"Страна производства: {OriginCountry}\");\n",
     "    }\n",
+    "\n",
+    "    public void Complete()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Заказ с ID: {SupplierId} выполнен\");\n",
+    "    }\n",
     "}\n",
     "\n",
     "\n",
@@ -272,6 +281,8 @@
     "    Console.WriteLine();\n",
     "\n",
     "    Retailer retailer = new Retailer(28, \"CyberLife\", \"Роботы\", \"Детроит\");\n",
+    "    retailer.GetCompanyInfo();\n",
+    "    retailer.ProvideQuote();\n",
     "    retailer.SubmitOrder();\n",
     "\n",
     "    Console.WriteLine();\n",
@@ -283,6 +294,7 @@
     "\n",
     "    Importer importer = new Importer(52, \"Балдёж\", \"Шоколад\", \"Норвегия\");\n",
     "    importer.GetCompanyInfo();\n",
+    "    importer.Complete();\n",
     "\n",
     "    Console.WriteLine();\n",
     "\n",
